--- a/imagey-web/src/index.css
+++ b/imagey-web/src/index.css
@@ -56,7 +56,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #1e88e5;
     background-color: #ffffff;
   }
   a:hover {
