--- a/imagey-web/src/elements.css
+++ b/imagey-web/src/elements.css
@@ -1,7 +1,4 @@
 header {
-  display: block;
-  width: 100%;
-  height: 64px;
   background-color: #006bd6;
 }
 
@@ -93,4 +90,9 @@ img.avatar-large {
 
 .bold {
   font-weight: bold;
+}
+
+button.top-bar {
+  width: 48px;
+  height: 48px;
 }
