--- a/imagey-web/src/layout.css
+++ b/imagey-web/src/layout.css
@@ -20,11 +20,26 @@ body {
     grid-template-columns: 100%;
   }
 
+  button.menu {
+    display: inline-flex;
+  }
+
   nav.rail {
     display: none;
   }
 
   nav.sub-nav {
+    display: none;
+  }
+
+  nav.drawer {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  aside {
     display: none;
   }
 }
@@ -36,6 +51,14 @@ body {
 
   main.card {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  button.menu {
+    display: none;
+  }
+
+  nav.drawer {
+    display: none;
   }
 
   aside {
@@ -52,6 +75,14 @@ body {
     grid-template-columns: repeat(3, 1fr);
   }
 
+  button.menu {
+    display: none;
+  }
+
+  nav.drawer {
+    display: none;
+  }
+
   aside {
     display: none;
   }
@@ -65,6 +96,31 @@ body {
   main.card {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  button.menu {
+    display: none;
+  }
+
+  nav.drawer {
+    display: none;
+  }
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  width: 100%;
+  height: 64px;
+}
+
+header.action-bar {
+  width: 64px;
+}
+
+h1 {
+  align-self: center;
 }
 
 main {
